Fix minor error (duplicate '시간')

--- a/locales/ko-KR/general.json
+++ b/locales/ko-KR/general.json
@@ -33,7 +33,7 @@
     "fixWanted": "",
     "followers": "팔로워 {{context}}명",
     "heavilyReported": "기여 {{context}}개",
-    "hoursPlayed": "{{context}}시간 플레이함",
+    "hoursPlayed": "{{context}} 플레이함",
     "mostBorked": "",
     "peakPlayers": "최대 플레이어 수 {{context}}명",
     "percentPositive": "긍정적인 리뷰 {{context}}%",
@@ -214,6 +214,6 @@
   },
   "search": {
     "headline": "\"{{q}}\" 검색",
-    "results": "결과"
+    "results": "결과 제공"
   }
 }
